--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -14,6 +14,24 @@ body {
   height: 100%;
 }
 
+.form-inline .form-group{
+  padding: 10px;
+
+  .form-control{
+    margin: 5px;
+    width: 100px;
+  }
+
+}
+
+.container{
+  padding: 0 12vw;
+}
+
+.jumbotron{
+ padding: 0;
+}
+
 *,
 *:before,
 *:after {
